# pyBOAT

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  TFApy_MacOS.command  empirical_backgrounds_demo.py  ensemble_demo.py  pyBOAT-UI.py  pyBOAT_MacOS.command  pyproject.toml  scripting_demo.py  scripting_template.py  scripting_templateOOP.py  start_ui.py  start_ui.sh
Qt5Examples/: embedding_in_qt5.py  matplotlibMenusQt5.py  simple_example.py
betaLabRelease/: L6CenterValues.csv  PSMexamples.tsv  PSMexamples.xlsx  TFApy_April.py  TFApy_noDataHandler.py  pyTFA_March18.py
custom_versions/: phase_sliders.py
data_examples/: P1.xlsx  P8_posterior.xlsx  PSMexamples.csv  PSMexamples_nohead.csv  fiji_measurement.txt  synth_signals2c.csv  synth_signals2c.xlsx  synth_signals3.csv
doc/: Links.txt  description.md  gui_from_source.md  guide.md  install.md  tfa_todo.org  todo.org  todo_dez17.txt  todo_feb18.txt  todo_march18  todo_pitch.txt
example_data/: AR1_0.7_ensemble.csv  README.md  description.md  phase_diff_ensemble.tsv  synth_signals.csv  synth_signals.xlsx
manuscript/: appendix.tex  tfa.bib  tfa.bib.bak  tfa.bib.sav  tfa_paper.aux  tfa_paper.bbl  tfa_paper.blg  tfa_paper.tex  theory_draft.aux  theory_draft.tex  wavelets_theory.tex
pyboat/: __init__.py  __main__.py  api.py  core.py  ensemble_measures.py  plotting.py  ssg.py
scripts/: pyBOAT_MacOS.command  start_ui.sh
src/: #todo.org#  TFApy.py  scripting_template.py  scripting_templateOOP.py
tests/: test_qt_import.py  test_single_signal.py
tfapy/: TFApy.py  scripting_template.py  (+1 more)
(+161 files in other folders)
