[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="pyboat"
author="Gregor Mönke"
author-email="gregor.moenke@embl.de"
home-page="https://github.com/tensionhead/pyBOAT"
requires=[
    "numpy >=1.18",
    "scipy >=1.4",
    "matplotlib >=3.1",
    "pandas >=0.25",
    "PyQt5 >=5.9.5",
]
classifiers=[
	    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	    "Programming Language :: Python :: 3",
	    ]
requires-python=">=3.6"
description-file="doc/description.md"
[tool.flit.scripts]
pyboat="pyboat:main"

