[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyboat"
authors = [{name = "Gregor Mönke", email = "tensionheadx@gmail.com"}]
description = "Time-frequency analysis of noisy non-stationary signals with Morlet Wavelets."
readme = "doc/description.md"
requires-python=">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy >=2",
    "scipy >=1.15",
    "matplotlib >=3.10",
    "pandas >=2",
    "pyside6 >=6.8",
    "openpyxl >=3.1.3"
]
classifiers=["Intended Audience :: Science/Research"]
dynamic = ["version"]

[project.urls]
Projectpage = "https://github.com/tensionhead/pyBOAT"

[project.scripts]
pyboat="pyboat:main"
